tests/NormalTests/paczka1/fuzzy1/43601542.err
Error in line 5: Or4s S736 29,3
Error in line 8: ywTl S736 139,00
Error in line 1: ywTl S736 48,1
Error in line 32: J38W S736 72,3
